--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "assignment-growthx",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./src/main.ts"
+    "start": "node ./dist/main.js",
+    "dev": "tsx watch ./src/main.ts",
+    "build": "tsup ./src/main.ts --format esm"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
@@ -24,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.9.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
